@startuml
title TaskFlow — TO-BE Entity Diagram (Post-Migration)
skinparam componentStyle rectangle
skinparam classAttributeIconSize 0
' Generated by /arch-diagrams from /home/dmitriy/Projects/TaskFlow
' DO NOT EDIT BY HAND — re-run /arch-diagrams to regenerate

package "domain/entities/" #LightBlue {
  class User {
    +id: UserId
    +email: Email
    +username: Username
    +password_hash: Password
    +role: Role
    +profile_id: ProfileId
    +security: UserSecurity
  }

  class Todo {
    +id: TodoId
    +user_id: OwnerId
    +title: TodoTitle
    +description: Description
    +visibility: Visibility
    +priority: Priority
    +categories: Vec<CategoryId>
    +assignees: Vec<AssigneeId>
    +tasks: Vec<TaskId>
  }

  class Task {
    +id: TaskId
    +todo_id: ParentId
    +user_id: OwnerId
    +title: TaskTitle
    +status: TaskStatus
    +priority: Priority
    +subtasks: Vec<SubtaskId>
  }

  class Subtask {
    +id: SubtaskId
    +task_id: ParentId
    +title: Title
    +completed: bool
  }

  class Group {
    +id: GroupId
    +name: GroupName
    +room_id: RoomId
    +owner_id: OwnerId
    +members: Vec<MemberId>
  }

  class Room {
    +id: RoomId
    +name: RoomName
    +participants: Vec<ParticipantId>
  }

  class Category {
    +id: CategoryId
    +name: CategoryName
    +color: HexColor
    +user_id: OwnerId
  }

  class Profile {
    +id: ProfileId
    +user_id: OwnerId
    +display_name: DisplayName
    +avatar: Option<Url>
  }
}

package "domain/value_objects/" #LightGreen {
  class TaskStatus {
    +Pending
    +Completed
    +Skipped
    +Failed
  }

  class Visibility {
    +Private
    +Public
  }

  class Priority {
    +Low
    +Medium
    +High
    +Urgent
  }

  class Role {
    +Admin
    +User
    +Guest
  }
}

package "domain/services/" #LightYellow {
  class PermissionService {
    +check_view(todo, user): bool
    +check_edit(todo, user): bool
    +check_delete(todo, user): bool
  }

  class SyncService {
    +sync_todo(todo, from, to): Result
    +sync_children(parent, from, to): Result
  }
}

User "1" -- "1" Profile : has >
User "1" -- "*" Todo : owns >
Todo "1" -- "*" Task : contains >
Task "1" -- "*" Subtask : contains >
Todo "1" -- "*" Category : categorized >
Group "1" -- "1" Room : uses >
Group "1" -- "*" User : members >
Todo "1" -- "*" User : assigned to >

note bottom of domain/entities
  All entities use branded types (UserId, TodoId, etc.)
  Constructors validate inputs
  No direct serialization in domain
end note

note bottom of domain/value_objects
  Value objects are immutable
  Validation in constructor
  TaskStatus, Visibility, Priority are enums
end note
@enduml
